#252 Further work on task